<resources>
    <string name="app_name">追踪大师</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_gallery">历史记录</string>
    <string name="menu_about">关于</string>

    <string name="et_uno">账号</string>
    <string name="et_passed">密码</string>
    <string name="btn_logo">登录</string>
    <string name="btn_user_item">用户条款</string>
    <string name="user_item"><br />
    本应用深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们致力于维持您对我们的信任，恪守以下原则，保护您的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。 请在使用我们的产品（或服务）前，仔细阅读并了解本《隐私权条款》。"
     一、我们如何收集和使用您的个人信息
       个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。 我们仅会出于本条款所述的以下目的，收集和使用您的个人信息：
      （一） 实际上我们不会收集您的任何个人信息，您的个人信息存在于本地数据库中。
      （二） 我们会对您的密码进行加密，防止数据泄露。
    二、我们如何使用 百度API定位 和同类技术
      （一）百度API
       为确保软件正常运转，我们会在您的移动设备上存储位置数据文件。位置数据通常包含标识符、站点名称以及一些号码和字符。
       我们不会将追踪技术用于本条款所述目的之外的任何用途。您可根据自己的偏好管理或删除位置信息。您可以清除设备上保存的所有历史记录。
    三、我们如何共享、转让您的个人信息
      （一）共享
         我们不会向其他任何公司、组织和个人分享您的个人信息。
      （二）转让
       我们不会将您的个人信息转让给任何公司、组织和个人。
    四、我们如何保护您的个人信息
      （一）我们已使用符合业界标准的安全防护措施保护您提供的个人信息，防止数据遭到未经授权访问、公开披露、使用、修改、损坏或丢失。我们会采取一切合理可行的措施，保护您的个人信息。例如，我们会使用加密技术确保数据的保密性；我们会使用受信赖的保护机制防止数据遭到恶意攻击；我们会部署访问控制机制，确保只有用户自己才可访问个人信息。
      （二）我们会采取一切合理可行的措施，确保不收集无关的个人信息。我们只会在达成本条款所述目的所需的期限内保留您的个人信息，除非需要延长保留期或受到法律的允许。
      （三）互联网并非绝对安全的环境，而且电子邮件、即时通讯、及与其他我们用户的交流方式并未加密，我们强烈建议您不要通过此类方式发送个人信息。请使用复杂密码，增加账号的安全性。
    五、本隐私权条款如何更新
      我们可能适时会对本隐私权条款进行调整或变更，本隐私权条款的任何更新将以标注更新时间的方式公布在我们软件上，除法律法规或监管规定另有强制性规定外，经调整或变更的内容一经通知或公布后的7日后生效。如您在隐私权条款调整或变更后继续使用我们提供的任一服务或访问我们相关软件的，我们相信这代表您已充分阅读、理解并接受修改后的隐私权条款并受其约束。
    </string>

    <string name="btn_start">开始</string>
    <string name="btn_end">结束</string>
    <string name="search_gps">GPS信号搜索中，请稍后…</string>

    <string name="about_introduce"><br />
        功能介绍：本app可以记录用户的位置信息，
        并且不断进行轨迹跟踪，方便用户在日常工作
        或者旅行途中使用，可以通过查阅历史记录来
        确定今天所走过的路线。</string>
    <string name="about_feedback">我要反馈</string>

    <string name="delete">删除</string>

    <string name="empty">暂无数据</string>
    <string name="detail">详情</string>


</resources>