<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.xyz.tracemaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.xyz.tracemaster.ui.trace.TraceFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_trace" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_history"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.xyz.tracemaster.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.xyz.tracemaster.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.xyz.tracemaster.ui.trace.HistoryFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_history" />
</navigation>